style.css
/* Custom properties/variables  */
:root {
	--main-white: #f0f0f0;
	--main-pink: #B74F6F;
	--main-purple: #ADBDFF;
	--main-light-blue: #34E5FF;
	--main-blue: #3185FC;
	--main-brown: #35281D;
  }

/* 1200px / 16px = 75em */
@media (max-width: 75em) {
	html {
	  font-size: 60%;
	}
  }
  
  /* 980px / 16px = 61.25em */
  @media (max-width: 61.25em) {
	html {
	  font-size: 58%;
	}
  }
  
  /* 460px / 16px = 28.75em */
  @media (max-width: 28.75em) {
	html {
	  font-size: 55%;
	}
  }

/* Main properties */
body {
	font-family: 'Optima', sans-serif;
	font-size: 8px;
	font-weight: 400;
	line-height: 1.4;
	color: var(--main-white);
}

h1,h2 {
  	font-family: 'Optima', sans-serif;
  	font-weight: 700;
  	text-align: center;
}

h1 {
	font-size: 55px;
}
  
h2 {
	font-size: 45px;
  }

p {
	font-size: 22px;
}

ul {
	/* color: var(--main-white); */
	list-style: none;
}

a {
	color: var(--main-white);
	text-decoration: none;
}
  
.text {
	display: flex;
	align-items: flex-start;
	font-size: 22px;
	padding-right: 300px;
	padding-left: 300px;
	text-align: center;

}


/* Navbar properties */

.nav-brand-logo {
	width: 75px;
	border: 1px solid var(--main-brown);
}

nav {
	font-size: 28px;
	font-family: 'Optima', sans-serif;
	position: fixed;
	background-color:var(--main-pink);
	color: var(--main-white);
	box-shadow: 0 2px 0 var(--main-brown);
}

.nav-item {
	text-shadow: 1px 1px 1px var(--main-brown);
	transition: transform 0.3s ease-out;
}

@media (max-width: 28.75em) {
	.nav {
	  justify-content: center;
	}
  
	.nav-item {
	  margin: 0 1rem;
	}
  }

.nav-item a:hover {
	color: var(--main-brown);
  }

/* Welcome section properties */

.welcome-section {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	left: 0;
	width: 100%;
	height: 100%;
	margin-left: 0px;
	margin-top: 7%;
	background: var(--main-purple);
	color: var(--main-brown);	
}

.welcome-section > h1 {
	text-shadow: 1px 1px 1px var(--main-white);
	transition: transform 0.3s ease-out;
	padding-bottom: 50px;
}



.welcome-section > p {
	font-weight: 200;
	text-shadow: 1px 1px 1px var(--main-brown);
	transition: transform 0.3s ease-out;
}

 .profile-image {
	width: 100%;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 50px;
	border: 5px solid var(--main-brown);
} 

.languages {
	color: var(--main-pink);
	font-size: 26px;
	text-shadow: 1px 1px 1px var(--main-brown);
	transition: transform 0.3s ease-out;
}

.list-inline > li {
	padding-right: 1rem;
}


/* Project section properties */

.projects-section{
	text-align: center;
  	padding: 10rem 2rem;
	background: var(--main-light-blue);
	color: var(--main-brown);
}

.projects-section-header {
	max-width: 640px;
	margin: 0 auto 6rem auto;
	text-shadow: 1px 1px 1px var(--main-white);
}

@media (max-width: 28.75em) {
	.projects-section-header {
	  font-size: 4rem;
	}
  }


.project {
	background: var(--main-pink);
	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
	border-radius: 2px;
  }

.projects-grid{
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
	grid-gap: 4rem;
	width: 100%;
	max-width: 1280px;
	margin: 0 auto;
	margin-bottom: 6rem;
}

@media (max-width: 30.625em) {
	.projects-section {
	  padding: 6rem 1rem;
	}
  
	.projects-grid {
	  grid-template-columns: 1fr;
	}
  }

.project-image {
	height: calc(100% - 6.8rem);
	width: 100%;
	object-fit: cover;
}

.project-title {
  font-size: 32px;
  font-weight: 700;
}

.project-title-span {
	color: var(--main-white);
	transition: color 0.3s ease-out;
}

.project:hover .project-title-span {
	color: var(--main-light-blue);
  }

/* Contact section properties */

.contact-section {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	width: 100%;
	height: 100vh;
	padding: 0 2rem;
	background: var(--main-blue);
}

.contact-section-header > h2 {
	font-size: 4rem;
}
  
@media (max-width: 28.75em) {
	.contact-section-header > h2 {
	  font-size: 4rem;
	}
}
  
.contact-section-header > p {
	font-style: italic;
}

.contact-links {
	display: flex;
	justify-content: center;
	width: 100%;
	max-width: 980px;
	flex-wrap: wrap;
	font-size: 28px;
}

  .contact-details {
	margin-top: 50px;
	font-size: 28px;
	color: var(--main-white);
	text-shadow: 1px 1px 1px var(--main-brown);
	transition: transform 0.3s ease-out;
}

